  States
  (friebe)
- Added io.collections.ArchiveCollection class to work with XARs
  (friebe)
- Added support for enums to the Remote API (EASC)
  See http://news.xp-framework.net/article/287/2009/01/28/
  (hinckel, friebe)
- Made lang.XPClass::isSubclassOf() accept not only a string with the 
  classname but also XPClass objects
  (friebe)

Bugfixes
~~~~~~~~
- Made /proc lookup inside lang.Process::getProcessById() work on 
  FreeBSD 7 - the link is /proc/$PID/file instead of /proc/$PID/exe
  (friebe, wagner)
- Fixed bug #33 - Parse error for comments having a line ending with "]" 
  (friebe)
- Fixed io.File::write() and io.File::writeLine() to throw an IOException
  if the underlying file handle has been closed
  (friebe)
- Fixed io.streams.FileInputStream and io.streams.FileOutputStream not 
  to close underlying file when they get garbage-collected.
  (friebe)
- Fixed remote interface mapping when creating the remote interface in the
  remote API
  (hinckel)
- Fixed util.Locale::setDefault() fatalling when the given locale does
  not exist (and while trying to throw an exception).
  (friebe)
- Fixed scriptlet.xml.XMLScriptletRequest not handling URLs handled
  by rewrite rules such as RewriteRule ^/category/([0-9]+)/.*$ /index.php 
  [E=PRODUCT:news,E=LANGUAGE:en_US,E=STATE:bycategory,E=CATID:$1,PT]
  (friebe)
- Fixed lang.Process thinking it would be able to execute directories 
  which would simply fail later on.
  (friebe)
- Fixed leftover of refactoring of peer.mail.MessagingAddress 
  interface in peer.mail.transport.SmtpTransport
  (gellweiler, reuter, kiesel)


Version 5.7.1, released 2009-01-23
----------------------------------
SVN version: 12768 

Heads up!
~~~~~~~~~
- Deprecated SOAP_ACTION_* global constants in 
  webservices.soap.transport.SOAPHTTPTransport class in favor of
  class constants in same class.
  (kiesel)

RFCs
~~~~
- Implemented RFC #0176 - Scriptlet URL handler classes
  (hinckel)

Bugfixes
~~~~~~~~